    TODO: Look at FTaskStream.h
    TODO: Use pseudo-pttys for line buffered output: http://stackoverflow.com/questions/12586555/controlling-an-interactive-command-line-utility-from-a-cocoa-app-trouble-with  --- Look at PseudoTTY class
    TODO: Use NSDictionaryController and bindings for all controls in main window and sub-controllers

    TODO: Validate UTIs and app bundle identifiers properly
    TODO: Treat drop into STPathTextField like any other drop, don't let editor swallow it
    TODO: File watching still broken for script path


    http://stackoverflow.com/questions/13355363/nstask-requires-flush-when-reading-from-a-process-stdout-terminal-does-not
    http://stackoverflow.com/questions/1276029/non-blocking-stdio

    TODO: Make the type lists in drop settings editable like those in Args controller

    * New template processing option for Status Item icon
    * Build script now generates sparkle hash
    * More robust command line tool version checking
    * Fixed issue where showing the Preferences window lagged due to icon fetching on main thread
    * Args button title now shows the number of custom arguments that have been set
    * UTIs are now the default in Drop Settings (public.item and public.folder)
    * Move project over to ARC

For 5.0
    * Long GNU named params for command line tool, e.g. --some-option
    * Fixed issue where ScriptExec quit before script output was parsed
    * Add new examples Icns2Iconset, ImageResizer
    * Integrated CFBundleVersion increment script into build process
    * Updated keys in information property lists
    * Added ALERT: example
    * Added authenticated execution example
    * Optimize Location: parsing for Web Output
    * Parsed commands are now removed from script text output
    * Fixed bug where Status Item menu intermittently showed empty output
    * New high res images for documentation
    * Added example showing STATUSMENUICON: syntax in action