@@ -87,6 +87,14 @@ BOOL UTTypeIsValid(NSString *inUTI) {
     return [test evaluateWithObject:inUTI];
 }
 
+BOOL BundleIdentifierIsValid(NSString *bundleIdentifier) {
+    // identical to UTType for now, but should really
+    // check if the reverse DNS has three components
+    NSString *reverseDNSRegEx = @"^[A-Za-z]{2,6}((?!-)\\.[A-Za-z0-9-]{1,63}(?<!-))+$";
+    NSPredicate *test = [NSPredicate predicateWithFormat:@"SELF MATCHES %@", reverseDNSRegEx];
+    return [test evaluateWithObject:bundleIdentifier];
+}
+
 
 
 
